# Unangband

./: .gitignore  Makefile.am  bugs.txt  build_ext_win.bat  build_src.bat  build_win.bat  changes.txt  compile.txt  configure.in  faq.txt  nocompile.txt  readme.txt  todo.txt
docs/: _config.yml  index.md
docs/_posts/: 2017-01-24-New-Maintainer.md  2017-01-28-Version065.md  2017-02-06-Regarding-Planned-Releases.md  2017-04-18-Continuing-Delay.md  2017-06-26-Version065a.md  2017-06-Version065a.md  2017-10-29-Version066.md  2017-11-30-RoadTo070.md  2018-07-03-Upcoming070.md  2018-12-25-Version070pre1.md
lib/: Makefile.am
lib/apex/: Makefile.am
lib/bone/: Makefile.am
lib/data/: Makefile.am
lib/docs/: modding.rtf  modding.txt
lib/edit/: Makefile.am  artifact.txt  blows.txt  cost_adj.txt  dungeon.txt  effect.txt  ego_item.txt  flavor.txt  limits.txt  monster.txt  names.txt  object.txt  p_class.txt  p_hist.txt  p_race.txt  quest.txt  randart_sv.txt  region.txt  room.txt  rune.txt  shop_own.txt  spell.txt  store.txt  style.txt  terrain.txt  vault.txt
lib/file/: Makefile.am  news.txt
lib/help/: Makefile.am  attack.txt  bestiary.txt  birth.hlp  birth.txt  classes.txt  cmddesc.txt  cmdgrid.txt  cmdkill.txt  cmdlook.txt  cmdorig.txt  cmdrogue.txt  colleges.txt  command.hlp  debug.txt  difficulty.txt  dungeon.hlp  dungeon.txt  egoitem.txt  faq.txt  gameinfo.txt  general.hlp  help.hlp  keyboard.txt  macro.txt  magic.txt  memap.txt  oldwelc.txt  option.txt  playing.txt  prayers.txt  races.txt  religions.txt  resist.txt  rollers.txt  rumours.hlp  schools.txt  songs.txt  stats.txt  studies.hlp  (+11 more)
lib/info/: Makefile.am  begin10.txt  birth1.txt  birth2.txt  birth3.txt  birth4.txt  birth5.txt  birth6.txt  dungeon1.txt  dungeon12.txt  dungeon26.txt  dungeon5.txt  dungeon69.txt  kind84.txt  kind87.txt  readme.txt  scho1-52-2.txt  scho1-57-2.txt  scho1-62-2.txt  scho1-62-3.txt  spell197.txt  style1.txt  style2.txt  style3.txt  style4.txt  style5.txt  style6.txt  style7.txt  tval1.txt  tval5.txt  tval6-5.txt  tval6-7.txt  tval6.txt  tval75-2.txt  tval75-3.txt  tval75.txt  tval8.txt  tval80-10.txt  tval80-3.txt  tval80-5.txt  (+6 more)
lib/pref/: Makefile.am  flvr-iso.prf  font-ibm.prf  font-mac.prf  font-win.prf  font-xxx.prf  font.prf  graf-ami.prf  graf-dvg.prf  graf-gcu.prf  graf-ibm.prf  graf-iso.prf  graf-mac.prf  graf-new.prf  graf-win.prf  graf-xxx.prf  pref.prf  user.prf
lib/save/: Makefile.am
lib/todo/: K_INFO2.TXT  Makefile.am  d_INFO2.TXT  future.txt
lib/user/: Makefile.am
lib/xtra/: Makefile.am
lib/xtra/font/: Makefile.am
lib/xtra/graf/: Makefile.am
lib/xtra/music/: Makefile.am
lib/xtra/sound/: Makefile.am  sound.cfg
src/: Makefile.am  Makefile.ami  Makefile.bcc  Makefile.cyg  Makefile.dos  Makefile.gtk  Makefile.ibm  Makefile.inc  Makefile.lcc  Makefile.lsl  Makefile.osx  Makefile.ros  Makefile.src  Makefile.std  Makefile.wat  Makefile.win  angband.h  angband.rc  birth.c  borgdumb.c  borgdumb.h  cave.c  cmd1.c  cmd2.c  cmd3.c  cmd4.c  cmd5.c  cmd6.c  commondefs.inc  config.h  defines.h  dungeon.c  ego-idx.txt  externs.h  files.c  generate.c  h-config.h  h-system.h  info.c  init.h  (+49 more)
src/cocoa/: Data.icns
src/cocoa/English.lproj/MainMenu.nib/: designable.nib
src/osx/: Angband.xml  Edit.icns  Save.icns  Unangband.icns  osx.h  osx_tables.h
src/osx/English.lproj/: .cvsignore
src/osx/English.lproj/main.nib/: info.nib  objects.xib
